force-app/main/default/objects/TRL_Priorization_Config__c/TRL_Priorization_Config__c.object-meta.xml
<CustomObject>
    <label>CS Tech Request Priorization Config</label>
    <nameField>
        <displayFormat>ID{0000}</displayFormat>
        <label>CS Tech Request Priorization Config</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CS Tech Request Priorization Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>