force-app/main/default/objects/TRL_Priorization_Config__c/fields/FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>FieldLabel__c</fullName>
    <label>FieldLabel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TRL_Prio_Fields</valueSetName>
    </valueSet>
</CustomField>