force-app/main/default/objects/TRL_Priorization_Config__c/fields/Filter_Score__c.field-meta.xml
<CustomField>
    <fullName>Filter_Score__c</fullName>
    <label>Filter Score Percentage (Col H)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>