force-app/main/default/objects/TRL_Priorization_Config__c/fields/Filterfield__c.field-meta.xml
<CustomField>
    <fullName>Filterfield__c</fullName>
    <inlineHelpText>FilterField incl. Object Name</inlineHelpText>
    <label>Filterfield</label>
    <length>200</length>
    <type>Text</type>
</CustomField>