force-app/main/default/objects/TRL_Priorization_Config__c/fields/FilterHigh__c.field-meta.xml
<CustomField>
    <fullName>FilterHigh__c</fullName>
    <label>Filter Ranger High Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>