force-app/main/default/objects/TRL_Priorization_Config__c/fields/FilterLow__c.field-meta.xml
<CustomField>
    <fullName>FilterLow__c</fullName>
    <label>Filter Range Low Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>