force-app/main/default/objects/TRL_Priorization_Config__c/fields/FilterType__c.field-meta.xml
<CustomField>
    <fullName>FilterType__c</fullName>
    <inlineHelpText>only for parent records</inlineHelpText>
    <label>FilterType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>