force-app/main/default/objects/TRL_Priorization_Config__c/fields/IsParent__c.field-meta.xml
<CustomField>
    <fullName>IsParent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>if true: defines the Weighted score</inlineHelpText>
    <label>IsParent</label>
    <type>Checkbox</type>
</CustomField>