force-app/main/default/objects/TRL_Priorization_Config__c/fields/Parent_Filter__c.field-meta.xml
<CustomField>
    <fullName>Parent_Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Filter</label>
    <referenceTo>TRL_Priorization_Config__c</referenceTo>
    <relationshipLabel>Configuration Values</relationshipLabel>
    <relationshipName>Config</relationshipName>
    <type>Lookup</type>
</CustomField>