force-app/main/default/objects/TRL_Priorization_Config__c/fields/Score_Weight__c.field-meta.xml
<CustomField>
    <fullName>Score_Weight__c</fullName>
    <inlineHelpText>% Weight for the Score - col E</inlineHelpText>
    <label>% Weight</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>