force-app/main/default/objects/TRL_Priorization_Config__c/fields/Scoring_Factor__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Factor__c</fullName>
    <inlineHelpText>Weighted Score - col F</inlineHelpText>
    <label>Weighted Score</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>