force-app/main/default/objects/TRL_Priorization_Config__c/fields/ScoringString__c.field-meta.xml
<CustomField>
    <fullName>ScoringString__c</fullName>
    <label>ScoringString</label>
    <length>99</length>
    <type>Text</type>
</CustomField>