force-app/main/default/objects/TRL_Priorization_Config__c/fields/Theather__c.field-meta.xml
<CustomField>
    <fullName>Theather__c</fullName>
    <label>Theather</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>