force-app/main/default/objects/TRL_Priorization_Config__c/fields/TRL_Config_Field__c.field-meta.xml
<CustomField>
    <fullName>TRL_Config_Field__c</fullName>
    <formula>if( !IsParent__c,  TEXT(Parent_Filter__r.FieldLabel__c), &apos;&apos;)</formula>
    <label>CS Tech Request Config Field</label>
    <type>Text</type>
</CustomField>