force-app/main/default/objects/TRL_Priorization_Config__c/fields/TRL_Config_Region__c.field-meta.xml
<CustomField>
    <fullName>TRL_Config_Region__c</fullName>
    <formula>if( !IsParent__c, TEXT(Parent_Filter__r.Theather__c), &apos;&apos;)</formula>
    <label>CS Tech Request Config Region</label>
    <type>Text</type>
</CustomField>