force-app/main/default/objects/TRL_Priorization_Config__c/listViews/All_Master_Entries.listView-meta.xml
<ListView>
    <fullName>All_Master_Entries</fullName>
    <columns>NAME</columns>
    <columns>FieldLabel__c</columns>
    <columns>Theather__c</columns>
    <columns>Score_Weight__c</columns>
    <columns>Scoring_Factor__c</columns>
    <columns>ScoringString__c</columns>
    <columns>TRL_Config_Field__c</columns>
    <columns>TRL_Config_Region__c</columns>
    <columns>FilterLow__c</columns>
    <columns>FilterHigh__c</columns>
    <columns>Filter_Score__c</columns>
    <columns>FilterType__c</columns>
    <columns>Parent_Filter__c</columns>
    <columns>IsParent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsParent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Master Entries</label>
    <language>en_US</language>
</ListView>